--- a/admin/index.html
+++ b/admin/index.html
@@ -90,7 +90,7 @@
         async function checkAuth() {
             const { data: { session } } = await window.supabaseClient.auth.getSession();
             if (session) {
-                window.location.href = './dashboard.html';
+                window.location.href = '/admin/dashboard.html';
             }
         }
         checkAuth();
