--- a/admin/index.html
+++ b/admin/index.html
@@ -137,7 +137,7 @@
                 if (error) throw error;
                 
                 // Success - redirect to dashboard
-                window.location.href = './dashboard.html';
+                window.location.href = 'admin/dashboard.html';
                 
             } catch (error) {
                 errorMessage.textContent = error.message || 'Login failed. Please try again.';
