--- a/index.html
+++ b/index.html
@@ -673,6 +673,9 @@
     <!-- ============================================
          SCRIPTS
     ============================================= -->
+    <!-- Path Configuration (must be loaded first) -->
+    <script src="./config/paths.js"></script>
+    
     <!-- Supabase JS Library -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
