--- a/admin/index.html
+++ b/admin/index.html
@@ -85,13 +85,12 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="/config/supabase.js"></script>
-    <script src="/config/paths.js"></script>
     <script>
         // Check if already logged in
         async function checkAuth() {
             const { data: { session } } = await window.supabaseClient.auth.getSession();
             if (session) {
-                window.location.href = './dashboard.html';
+                window.location.href = '/admin/dashboard.html';
             }
         }
         checkAuth();
@@ -138,7 +137,7 @@
                 if (error) throw error;
                 
                 // Success - redirect to dashboard
-                window.location.href = './dashboard.html';
+                window.location.href = 'admin/dashboard.html';
                 
             } catch (error) {
                 errorMessage.textContent = error.message || 'Login failed. Please try again.';
